tests/sumo/output/e1/errors/freq_negative/errors.sumo
Error: Negative sampling frequency (in e1Detector '4/1to3/1').
Quitting (on error).
